--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,35 +28,35 @@ jobs:
       run: |-
         wp core download --path=wordpress --force --quiet
         wp config create --path=wordpress --dbname=wordpress --dbuser=root --dbpass=root
-        wp core install --path=./wordpress --url=localhost --title=WordPress --admin_user=admin --admin_password=password --admin_email=wordpress@github.ss-post-exec.com
+        wp core install --path=./wordpress --url=localhost --title=WordPress --admin_user=admin --admin_password=password --admin_email=wordpress@github.simply-static-post-exec.com
 
     - uses: actions/checkout@v3
       with:
-        path: wordpress/wp-content/plugins/ss-post-exec
+        path: wordpress/wp-content/plugins/simply-static-post-exec
 
     - name: Validate composer.json and composer.lock
-      working-directory: ./wordpress/wp-content/plugins/ss-post-exec
+      working-directory: ./wordpress/wp-content/plugins/simply-static-post-exec
       run: composer validate --strict
 
     - name: Cache Composer packages
       id: composer-cache
       uses: actions/cache@v3
       with:
-        path: ./wordpress/wp-content/plugins/ss-post-exec/vendor
+        path: ./wordpress/wp-content/plugins/simply-static-post-exec/vendor
         key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-php-
 
     - name: Install dependencies
-      working-directory: ./wordpress/wp-content/plugins/ss-post-exec
+      working-directory: ./wordpress/wp-content/plugins/simply-static-post-exec
       run: composer install --prefer-dist --no-progress
 
     - name: Run test suite
-      working-directory: ./wordpress/wp-content/plugins/ss-post-exec
+      working-directory: ./wordpress/wp-content/plugins/simply-static-post-exec
       run: composer run-script ci-test
 
     - name: Publish Test Report
       uses: mikepenz/action-junit-report@v3
       if: always()
       with:
-        report_paths: './wordpress/wp-content/plugins/ss-post-exec/junit-result.xml'
+        report_paths: './wordpress/wp-content/plugins/simply-static-post-exec/junit-result.xml'
